--- a/app/src/main/res/layout/activity_line_graph.xml
+++ b/app/src/main/res/layout/activity_line_graph.xml
@@ -7,6 +7,9 @@
         android:id="@+id/linechart"
         xmlns:chart="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        chart:chart_axisColor="@android:color/white"
+        chart:chart_labelColor="@android:color/white"
+        chart:chart_shadowColor="@android:color/white"/>
 
 </FrameLayout>
