--- a/app/src/main/res/xml/stocks_widget_provider_info.xml
+++ b/app/src/main/res/xml/stocks_widget_provider_info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
                     android:initialLayout="@layout/stocks_widget"
-                    android:minHeight="250dp"
+                    android:minHeight="160dp"
                     android:minWidth="250dp"
+                    android:previewImage="@drawable/stocks_widget_preview"
                     android:updatePeriodMillis="3600000">
-
+    <!--Updates the widget every hour-->
 </appwidget-provider>
