feat: Adds support for layout mirroring using Android RTL.

--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -5,8 +5,10 @@
               android:layout_height="72dp"
               android:gravity="center_vertical"
               android:orientation="horizontal"
+              android:paddingEnd="16dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
+              android:paddingStart="16dp"
     >
 
     <TextView
@@ -14,7 +16,7 @@
         style="@style/StockSymbolTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
+        android:gravity="start|center_vertical"
         tools:text="GOOG"
         />
 
@@ -22,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="right"
+        android:gravity="end"
         >
 
         <TextView
@@ -30,6 +32,7 @@
             style="@style/BidPriceTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingEnd="10sp"
             android:paddingRight="10sp"
             tools:text="1000.00"
             />
@@ -40,8 +43,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/percent_change_pill"
+            android:paddingEnd="3dp"
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
+            android:paddingStart="3dp"
             tools:text="100%"
             />
     </LinearLayout>
