--- a/app/src/main/res/layout/activity_line_graph.xml
+++ b/app/src/main/res/layout/activity_line_graph.xml
@@ -4,7 +4,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:padding="24dp">
+              android:padding="24dp"
+              android:paddingEnd="24dp"
+              android:paddingStart="24dp">
 
     <TextView
         android:id="@+id/title_linechart"
