--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -11,6 +11,8 @@
               android:paddingStart="16dp"
     >
 
+    <!--Content descriptions for this list item are set programmatically by the QuoteCursorAdapter-->
+
     <TextView
         android:id="@+id/stock_symbol"
         style="@style/StockSymbolTextStyle"
