--- a/app/src/main/res/xml/stocks_widget_provider_info.xml
+++ b/app/src/main/res/xml/stocks_widget_provider_info.xml
@@ -4,6 +4,5 @@
                     android:minHeight="160dp"
                     android:minWidth="250dp"
                     android:previewImage="@drawable/stocks_widget_preview"
-                    android:updatePeriodMillis="3600000">
-    <!--Updates the widget every hour-->
+                    android:updatePeriodMillis="0">
 </appwidget-provider>
